crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_severity_gte_token_is_the_exact_number.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"_severity>=warn\", &SEVERITY_PIN)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "_severity" >= ?
---
params:
  0: 13
