crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_severity_in_list_binds_the_subject_once.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"_severity=warn,error\", &SEVERITY_PIN)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "_severity" IN (13, 14, 15, 16, 17, 18, 19, 20)
