crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_severity_in_list_expands_to_or_of_bands.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"_severity=warn,error\", &SEVERITY_PIN)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("_severity" BETWEEN 13 AND 16 OR "_severity" BETWEEN 17 AND 20)
