crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_severity_ne_band_widens_with_null_in_the_search_stage.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"_severity!=info\", &SEVERITY_PIN)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("_severity" NOT IN (9, 10, 11, 12) OR "_severity" IS NULL)
