crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_severity_negated_list_composes_scalar_widening.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"_severity!=warn,error\", &SEVERITY_PIN)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (NOT ("_severity" BETWEEN 13 AND 16) OR "_severity" IS NULL) AND (NOT ("_severity" BETWEEN 17 AND 20) OR "_severity" IS NULL)
