crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_severity_where_ne_band_stays_strict.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(r#\"* | where _severity != \"error\"\"#, &SEVERITY_PIN)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("_severity" NOT IN (17, 18, 19, 20))
